--- a/app/src/main/res/layout/activity_inventaire.xml
+++ b/app/src/main/res/layout/activity_inventaire.xml
@@ -55,8 +55,25 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/date"
                 android:layout_marginStart="15dp"
-                android:inputType="date"
-                />
+                android:inputType="date" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:gravity="right"
+                android:layout_marginLeft="30dp"
+                >
+
+                <Button
+                    android:id="@+id/ajoutProduit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:drawableRight="@drawable/ic_add_black_24dp"
+                    android:text="Ajout"
+                    />
+            </LinearLayout>
         </LinearLayout>
 
     </LinearLayout>
@@ -65,32 +82,29 @@
         android:layout_width="match_parent"
         android:layout_height="400dp">
 
-        <ListView
+        <!--<ListView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="15dp"
             android:background="#fff"
             android:id="@+id/listeInventaire">
 
-        </ListView>
+        </ListView>-->
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/viewsad"
+            android:id="@+id/refresh">
+        <GridView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/gridInventaire"
+            android:numColumns="4">
+
+        </GridView>
+        </android.support.v4.widget.SwipeRefreshLayout>
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="end"
-        >
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="15dp"
-            android:text="@string/valider"
-            android:drawableEnd="@drawable/ic_add_black_24dp"
-            android:background="#2c4d02"
-            android:textColor="#fff"
-            android:textStyle="bold"
-            android:layout_margin="15dp"
-            />
-    </LinearLayout>
+
 
 </LinearLayout>
