--- a/app/src/main/res/layout/add_user_layout.xml
+++ b/app/src/main/res/layout/add_user_layout.xml
@@ -77,7 +77,7 @@
             android:layout_marginEnd="5dp"
             />
 
-        <EditText
+      <!--  <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
@@ -92,7 +92,7 @@
             android:textColorHint="#FFFFFF"
             android:layout_marginBottom="25dp"
             android:layout_weight="1"
-            />
+            />-->
     </LinearLayout>
 
 
