--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/backgroundcolor"
     android:gravity="center"
     android:padding="50dp">
@@ -49,9 +49,15 @@
                     android:background="#fff"
                     android:hint="@string/rechercherClient"
                     android:padding="20dp"
-                    android:id="@+id/rechercheClient"
+                    android:id="@+id/rechercheUser"
                     android:drawableStart="@drawable/ic_search_black_24dp"
                     />
+               <!-- <android.support.v7.widget.SearchView
+                    android:id="@+id/rechercheUser"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:defaultQueryHint="Search.."
+                    />-->
 
             </LinearLayout>
 
