--- a/app/src/main/res/layout/custum_grid_client.xml
+++ b/app/src/main/res/layout/custum_grid_client.xml
@@ -43,6 +43,15 @@
             android:textColor="@android:color/darker_gray"
             android:id="@+id/prenomClient"/>
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Mutuelle."
+            android:padding="5dp"
+            android:textColor="@android:color/darker_gray"
+            android:id="@+id/mutuelle"/>
+
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
