--- a/app/src/main/res/layout/infos_client_layout.xml
+++ b/app/src/main/res/layout/infos_client_layout.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:orientation="vertical" android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/backgroundcolor"
-                android:padding="40dp">
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/backgroundcolor"
+    android:padding="40dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -27,17 +27,17 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Nom : "
+                android:text="Nom du mutuelle : "
                 android:padding="15dp"
                 android:layout_weight="1"
                 android:textColor="@color/primaryDark"
                 />
 
             <TextView
-                android:id="@+id/valeurNomGrossiste"
+                android:id="@+id/valeurMutuelleClient"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Nom du grossiste."
+                android:text="Mutuelle"
                 android:padding="15dp"
                 android:layout_weight="1"
 
@@ -56,17 +56,17 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Adresse : "
+                android:text="Nom du client : "
                 android:padding="15dp"
                 android:layout_weight="1"
                 android:textColor="@color/primaryDark"
                 />
 
             <TextView
-                android:id="@+id/valeurAdresseGrossiste"
+                android:id="@+id/valeurNomClient"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Prenom utilisateur."
+                android:text="client"
                 android:padding="15dp"
                 android:layout_weight="1"
 
@@ -84,17 +84,45 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Telephone : "
+                android:text="Prénom client : "
                 android:padding="15dp"
                 android:layout_weight="1"
                 android:textColor="@color/primaryDark"
                 />
 
             <TextView
-                android:id="@+id/valeurTelephoneGrossiste"
+                android:id="@+id/valeurPrenomClient"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Username."
+                android:text="Prénom client."
+                android:padding="15dp"
+                android:layout_weight="1"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="#fff"
+            android:weightSum="2"
+            android:padding="20dp"
+            android:layout_marginTop="5dp"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Telephone du client"
+                android:padding="15dp"
+                android:layout_weight="1"
+                android:textColor="@color/primaryDark"
+                />
+
+            <TextView
+                android:id="@+id/valeurTelephoneClient"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Telephone du client."
                 android:padding="15dp"
                 android:layout_weight="1"
                 />
