--- a/app/src/main/res/layout/activity_mutuelle.xml
+++ b/app/src/main/res/layout/activity_mutuelle.xml
@@ -30,22 +30,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/creer"
-                    android:id="@+id/creerClient"
+                    android:id="@+id/creerMutuelle"
                     android:drawableEnd="@drawable/ic_add_black_24dp"
                     android:background="#fff"
                     android:padding="20dp"
                     />
 
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Ajout Mutuelle"
-                    android:id="@+id/ajoutMutuelle"
-                    android:drawableEnd="@drawable/ic_add_black_24dp"
-                    android:background="#fff"
-                    android:padding="20dp"
-                    android:layout_marginLeft="10dp"
-                    />
+
             </LinearLayout>
 
             <LinearLayout
@@ -58,9 +49,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="#fff"
-                    android:hint="@string/rechercherClient"
+                    android:hint="@string/rechercherMutuelle"
                     android:padding="20dp"
-                    android:id="@+id/rechercheClient"
+                    android:id="@+id/rechercheMutuelle"
                     android:drawableStart="@drawable/ic_search_black_24dp"
                     />
 
@@ -78,7 +69,7 @@
             <GridView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/gridClient"
+                android:id="@+id/gridMutuelle"
                 android:numColumns="4">
 
             </GridView>
