--- a/app/src/main/res/layout/activity_inventaire.xml
+++ b/app/src/main/res/layout/activity_inventaire.xml
@@ -35,6 +35,7 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/codeProduit"
                 android:layout_marginStart="15dp"
+                android:id="@+id/codeProduit"
                 />
         </LinearLayout>
 
